--- a/index.html
+++ b/index.html
@@ -205,19 +205,19 @@
     <section class="wait ">
       <div class=" container-fluid">
 
-        <h3 class="text-center">¿Por qué elegirnos? </h3>
+        <h3 class="text-center text-primary fs-2">¿Por qué Blank file? </h3>
 
 
         <div class="row py-5">
 
 
-          <div class="col-lg-2 col-md-5 col-11">
+          <div class="col-lg-2 col-md-5 col-11 shadow-sm">
 
             <div class="circle">
               <i class="fas fa-dollar-sign" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h5>Precio</h5>
+              <h5 class="text-primary fs-4">Precio</h5>
               <p>
                 Creemos que la calidad no debe comprometerse por el costo,
                 Brindamos un excelente producto por tu inversión.
@@ -231,12 +231,12 @@
 
           </div>
 
-          <div class="col-lg-2 col-md-5 col-11">
+          <div class="col-lg-2 col-md-5 col-11 shadow-sm">
             <div class="circle">
               <i class="fas fa-history" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h5>Velocidad</h5>
+              <h5 class="text-primary fs-4">Velocidad</h5>
               <p>
                 Sabemos lo importante que es tu proyecto y nos comprometemos a cumplir con los plazos acordados.
                 Nuestra dedicación a la puntualidad significa que tu sitio web estará listo cuando lo necesites.
@@ -244,12 +244,12 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-5 col-11">
+          <div class="col-lg-2 col-md-5 col-11 shadow-sm">
             <div class="circle">
               <i class="far fa-heart" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h5>Dedicacion</h5>
+              <h5 class="text-primary fs-4">Dedicacion</h5>
               <p>
                 Amamos lo que hacemos y por eso lo hacemos bien, cada sitio web que creamos es unico, se adapta a
                 las necesidades de cada cliente y es tratado con la misma dedicacion y seriedad que los demas
@@ -257,12 +257,12 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-5 col-11">
+          <div class="col-lg-2 col-md-5 col-11 shadow-sm">
             <div class="circle">
               <i class="fas fa-handshake" style="color: #ffffff;"></i>
             </div>
             <div class="contenido">
-              <h5>Personal</h5>
+              <h5 class="text-primary fs-4">Personal</h5>
               <p>
                 Ofrecemos una atención personalizada desde el primer
                 contacto hasta la entrega del sitio web y más allá. Estamos aquí para escuchar tus ideas y brindarte
@@ -281,7 +281,7 @@
     <section class="container-fluid meet-color pt-4  pb-2">
       <div class="container meet" id="meet">
         <h4>¿Como lo hacemos?</h4>
-        <h3>Tu pagina web cada vez mas cerca</h3>
+        <h3 class="text-primary fs-2">Tu pagina web cada vez mas cerca</h3>
         <div class="row py-5 about-center">
           <div class="izq img col-md-6 centro-img ">
             <img src="assets/strategy.png" class="img-fluid" alt="Diseño y desarrollo web">
@@ -373,23 +373,7 @@
         </div>
       </div>
 
-      <div class="plus">
-        <div class="container">
-          <div class="row center-plus">
-            <div id="center" class="col-md-9">
-              <h4 class="">Correcciones y mantenimiento</h4>
-              <p class="pt-1">
-                Después de la entrega, se brinda soporte y asistencia al cliente. Se realizan las correcciones
-                necesarias y se brinda ayuda en caso de que el cliente necesite realizar modificaciones o
-                actualizaciones en
-                su página. Además, se ofrecen servicios adicionales, como el mantenimiento y
-                la optimización de la página web, para garantizar su correcto funcionamiento a largo plazo.
-              </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
+     
     </section>
 
     <!--flayers-->
@@ -397,14 +381,14 @@
     <section class="flayers py-5">
       <div class="container-fluid ">
         <div class="row center-flay">
-          <article class="izq cardi col-lg-4 col-md-3 col-10">
+          <article class="izq cardi col-lg-4 col-md-3 col-10 shadow">
             <div class=" content">
               <h5 class="subtitle ">
                 <small>
                   Diseño e Identidad
                 </small>
               </h5>
-              <h3 class="title heading">Destaca en linea con un diseño impactante</h3>
+              <h3 class="title heading text-primary fs-1">Destaca en linea con un diseño impactante</h3>
                 <p class="paragraph para">
                   Crearemos una presencia digital única y atractiva que refleje
                   la identidad de tu marca.
@@ -413,14 +397,14 @@
             </div>
           </article>
 
-          <article class="low cardi col-lg-4 col-md-3 col-10">
+          <article class="low cardi col-lg-4 col-md-3 col-10 shadow">
             <div class="content">
               <h5 class="subtitle">
                 <small>
                   Responsive Design
                 </small>
               </h5>
-              <h3 class="title heading">Tu sitio web visible en todos los dispositivos</h3>
+              <h3 class="title heading text-primary fs-1">Tu sitio web visible en todos los dispositivos</h3>
      
                 <p class="paragraph para">
                   Diseñamos tu web para que se ajuste a todos los dispositivos,
@@ -430,14 +414,14 @@
               </div>
           </article>
 
-          <article class="der cardi col-lg-4 col-md-3  col-10">
+          <article class="der cardi col-lg-4 col-md-3  col-10 shadow">
             <div class="content">
               <h5 class="subtitle">
                 <small>
                   SEO y Posicionamiento web
                 </small>
               </h5>
-              <h3 class="title heading">Potencia tu presencia en los buscadores </h3>
+              <h3 class="title heading text-primary fs-1">Potencia tu presencia en los buscadores </h3>
                 <p class="paragraph para">
                   Implementamos estrategias efectivas para posicionar tu sitio en los
                   primeros resultados de busqueda. Atrae mas trafico y aumenta las oportunidades.
@@ -445,6 +429,22 @@
             </div>
           </article>
         </div>
+      </div>
+
+      <div class="plus mt-5">
+        <div class="container">
+          <div class="row center-plus border: shadow-sm">
+            <div id="center" class="col-md-9">
+              <h4 class="">Correcciones y mantenimiento</h4>
+              <p class="pt-1">
+                Después de la entrega, brindamos soporte y asistencia en caso de que necesites realizar modificaciones o
+                actualizaciones en el futuro. Además, se ofrecen servicios adicionales, como el mantenimiento y
+                la optimización de la página web, para garantizar su correcto funcionamiento a largo plazo.
+              </p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -457,7 +457,7 @@
         <div class="trabajos">
 
           <h4 class=""><i class="bi bi-file-earmark-code"></i> Nuestros proyectos</h4>
-          <h3 class="py-3">
+          <h3 class="text-primary fs-2">
             Echa un vistazo a nuestros clientes</h3>
           <hr>
 
@@ -466,13 +466,13 @@
             <div class="col-lg-4 col-md-6 py-3">
               <a href="https://argonautasrock.com.ar" target="_blank">
                 <img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas">
-                <h5 class="text-info">Argonautas</h5>
+                <h5 >Argonautas</h5>
               </a>
             </div>
             <div class="col-lg-4 col-md-6 py-3">
               <a href="https://cooperativaomega.com.ar" target="_blank">
                 <img class="" loading="lazy" src="assets/coop-mock.png" alt="omega seguridad">
-                <h6>Cooperativa omega</h6>
+                <h5>Cooperativa omega</h5>
               </a>
             </div>
 
@@ -548,7 +548,7 @@
   <!--footer-->
   <footer class="footer container-fluid">
 
-    <div class="footer-main row pt-5">
+    <div class="footer-main row">
 
       <div class=" col-lg-4 col-md-3">
         <img class="img-fluid" src="assets/blank-logo-f.png" alt="footer diseño web logo">
@@ -557,8 +557,6 @@
         <p class="py-4">
           Como vos, estamos creciendo, nos estamos expandiendo y queremos que seas parte de esto.
           <br>
-          <br>
-
           Servicios de Marketing digital y Desarrollo web.
         </p>
       </div>
