estructura index - terminada

--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
               Creamos tu sitio web atractivo, rapido y moderno.
             </span>
             <div class="row botones py-3">
-              <div class="col-lg-5 col-6 py-3">
+              <div class="col-lg-5 col-5 py-3">
                 <a href="#titulo">
                   <button type="button" class="btn btn-primary">Ver mas</button>
                 </a>
 
               </div>
-              <div class="col-lg-5 col-6 py-3">
+              <div class="col-lg-5 col-5 py-3">
                 <a href="contacto.html">
                   <button type="button" class="btn btn-light">Contacto</button>
                 </a>
@@ -270,12 +270,16 @@
 
   </section>
 
+  <div class="wave-2"></div>
+
+
     <!--como trabajamos-->
-    <section class="container-fluid meet-color pt-4  pb-2">
-      <div class="container meet" id="meet">
+    <section class="container-fluid meet-color">
+      <div class="container meet pt-2" id="meet">
         <h4>¿Como lo hacemos?</h4>
         <h3 class="text-primary fs-2">Tu pagina web cada vez mas cerca</h3>
-        <div class="row py-5 about-center">
+        <hr>
+        <div class="row pt-5">
           <div class="izq img col-md-6 centro-img ">
             <img src="assets/strategy.png" class="img-fluid" alt="Diseño y desarrollo web">
           </div>
@@ -354,7 +358,7 @@
             </div>
 
             <div class="boton2">
-              <div class="col-lg-4 py-2">
+              <div class="col-lg-4">
                 <a href="https://blankfile.com.ar/contacto">
                   <button type="button" class="btn ">Contacto</button>
                 </a>
@@ -368,10 +372,11 @@
 
 
     </section>
+    <div class="wave-3"></div>
 
     <!--flayers-->
 
-    <section class="flayers py-5">
+    <section class="flayers ">
       <div class="container-fluid ">
         <div class="row center-flay">
           <article class="izq cardi col-lg-4 col-md-3 col-10 shadow">
@@ -426,8 +431,8 @@
 
       <div class="plus mt-5">
         <div class="container">
-          <div class="row center-plus border: shadow-sm">
-            <div id="center" class="col-md-9">
+          <div class="row center-plus  ">
+            <div id="center" class="col-lg-9 col-11 shadow-sm pt-2">
               <h4 class="">Correcciones y mantenimiento</h4>
               <p class="pt-1">
                 Después de la entrega, brindamos soporte y asistencia en caso de que necesites realizar modificaciones o
@@ -550,14 +555,14 @@
         <img class="img-fluid" src="assets/blank-logo-f.png" alt="footer diseño web logo">
       </div>
       <div class="col-lg-4 col-md-3">
-        <p class="py-4">
+        <p class="pt-4">
           Como vos, estamos creciendo, nos estamos expandiendo y queremos que seas parte de esto.
           <br>
           Servicios de Marketing digital y Desarrollo web.
         </p>
       </div>
 
-      <div class="col-lg-4 col-md-3 pt-5" id="linkf">
+      <div class="col-lg-4 col-md-3 pt-2" id="linkf">
 
         <h5 class="pt-2"><strong>CONTACTO</strong></h5>
         <hr>
@@ -597,8 +602,8 @@
     </div>
 
     <div class="footer-copy row">
-      <div class=" col-md-12">
-        <p class="">
+      <div class=" col-lg-12">
+        <p class="text-center">
           © 2023 Blank file / Todos los derechos reservados.
         </p>
       </div>
