inicio-edit-about

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -73,12 +73,12 @@
   </button>
 
   <header class="" id="header">
-    <nav class="navbar navbar-expand-lg" data-bs-theme="ligth" id="nav">
+    <nav class="navbar navbar-expand-lg bg-section-dark " data-bs-theme="dark" id="nav">
       <div class="container">
 
         <a href="https://blankfile.com.ar" class="navbar-brand">
-          <h1 class="sr-only">Diseño web en cordoba</h1>
-          <img src="assets/blank-logo.png" alt="crear paginas web logo" class="logo">
+          <h1 class="sr-only">paginas web en cordoba</h1>
+          <img src="assets/blank-logo-f.png" alt="crear paginas web logo" class="logo">
         </a>
 
         <!-- NAV BUTTON  -->
@@ -89,7 +89,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="ligth">
-            <a class="offcanvas-title"><img src="assets/blank-logo.png" alt="diseño web en cordoba "></a>
+            <a class="offcanvas-title"><img src="assets/blank-logo-f.png" alt="diseño web en cordoba "></a>
             <button class="btn-close btn btn-light" type="button" aria-label="Close"
               data-bs-dismiss="offcanvas"></button>
           </div>
@@ -130,39 +130,37 @@
   </header>
 
 
-  <!--baner-->
-  <section class="container-fluid">
-    <div class="row  " id="bannertop">
+    <!--baner-->
 
-      <div class="col-lg-7 " id="fondo">
-        <h2>Nosotros estuvimos en tu lugar</h2>
+    <section class="container-fluid " id="banner">
 
-        <h3> Hoy estamos para guiarte</h3>
-        <div class="row botones">
-          <div class="col-lg-4 py-4">
-            <a href="contacto.html">
-              <button class="cssbuttons-io-button"> crea tu web
-                <div class="icon">
-                  <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                      fill="currentColor"></path>
-                  </svg>
-                </div>
-              </button>
-            </a>
+      <div class="container px-5">
+        <div class="row" id="bannertop">
+
+          <div class="col-lg-5" id="fondo">
+            <h2 class="fs-1">Nosotros estuvimos en tu lugar</h2>
+            <h3 class="text-primary fs-1">Hoy estamos para guiarte</h3>
+            <div class="row botones py-3">
+              <div class="col-lg-5 col-5 py-3 mx-2">
+                <a href="contacto.html">
+                  <button type="button" class="btn btn-light">Contacto</button>
+                </a>
+              </div>
+            </div>
+
           </div>
+
+          <div class="col-lg-7 ">
+            <img class="img-fluid" src="assets/guiarte.png" alt="diseño web">
+          </div>
+
+
         </div>
       </div>
+    </section>
 
 
-      <div class="col-lg-5">
-        <img class="img-fluid" src="assets/guiarte.png" alt="paginas web - nosotros">
-      </div>
-
-    </div>
-  </section>
-
+    <!-- editar para abajo -->
   <main>
 
     <!--intro-->
