--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <a href="https://blankfile.com.ar" class="navbar-brand">
           <h1 class="sr-only">paginas web en cordoba</h1>
-          <img src="assets/blank-logo.png" alt="crear paginas web logo" class="logo">
+          <img src="assets/blank-logo-f.png" alt="crear paginas web logo" class="logo">
         </a>
 
         <!-- NAV BUTTON  -->
@@ -91,7 +91,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="ligth">
-            <a class="offcanvas-title"><img src="assets/blank-logo.png" alt="diseño web en cordoba "></a>
+            <a class="offcanvas-title"><img src="assets/blank-logo-f.png" alt="diseño web en cordoba "></a>
             <button class="btn-close btn btn-light" type="button" aria-label="Close"
               data-bs-dismiss="offcanvas"></button>
           </div>
@@ -148,13 +148,13 @@
               Creamos tu sitio web atractivo, rapido y moderno.
             </span>
             <div class="row botones py-3">
-              <div class="col-lg-5 col-5 py-3">
+              <div class="col-lg-5 col-5 py-3 mx-2">
                 <a href="#titulo">
                   <button type="button" class="btn btn-primary">Ver mas</button>
                 </a>
 
               </div>
-              <div class="col-lg-5 col-5 py-3">
+              <div class="col-lg-5 col-5 py-3 mx-2">
                 <a href="contacto.html">
                   <button type="button" class="btn btn-light">Contacto</button>
                 </a>
@@ -480,7 +480,7 @@
 
     </section>
 
-
+    <div class="wave-w"></div>
 
 
     <!--blog index-->
@@ -546,6 +546,7 @@
 
   </main>
 
+  <div class="wave-f"></div>
   <!--footer-->
   <footer class="footer container-fluid">
 
