--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -194,7 +194,7 @@
           <div class="texto col-md-6">
             <div class="col-lg-12 py-5">
               <h4>
-                <i class="bi bi-file-person"></i> ¿quienes somos?
+                <i class="bi bi-file-person text-primary"></i> ¿quienes somos?
               </h4>
               <p>
                 Blank_file surge con el propósito de ayudar a
@@ -207,7 +207,7 @@
             </div>
             <div class="low col-lg-12 py-5">
               <h4>
-                <i class="bi bi-chat-left-heart"></i> Nos apasiona lo que hacemos
+                <i class="bi bi-chat-left-heart text-primary"></i> Nos apasiona lo que hacemos
               </h4>
               <p>
                 Cada proyecto que asumimos es tratado con el mismo
@@ -226,42 +226,49 @@
 
     <!--trabajos-->
 
-    <section class="work pb-5" id="work">
+    <!--trabajos-->
+
+    <section class="work pb-2" id="work">
       <article class="container">
         <div class="trabajos">
 
-          <h5 class=""><i class="bi bi-file-earmark-code"></i> Nuestros proyectos</h5>
-          <h3 class="py-3">
-            Echa un vistazo<br> a nuestros clientes</h3>
+          <h4 class=""><i class="bi bi-file-earmark-code"></i> Nuestros proyectos</h4>
+          <h3 class="text-primary fs-2">
+            Echa un vistazo a nuestros clientes</h3>
           <hr>
 
 
-          <div class="row work-galery text-center low">
-            <div class="col-lg-4 col-md-6 py-3"><a href="https://argonautasrock.com.ar" target="_blank"><img class=""
-                  loading="lazy" src="assets/argo-mock.png" alt="argonautas">
-                <h6>Argonautas</h6>
-              </a></div>
-            <div class="col-lg-4 col-md-6 py-3"><a href="https://cooperativaomega.com.ar" target="_blank"><img class=""
-                  loading="lazy" src="assets/coop-mock.png" alt="omega seguridad">
-                <h6>Cooperativa omega</h6>
-              </a></div>
+          <div class="row work-galery text-center">
+            <div class="col-lg-4 col-md-6 py-3">
+              <a href="https://argonautasrock.com.ar" target="_blank">
+                <img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas">
+                <h5>Argonautas</h5>
+              </a>
+            </div>
+            <div class="col-lg-4 col-md-6 py-3">
+              <a href="https://cooperativaomega.com.ar" target="_blank">
+                <img class="" loading="lazy" src="assets/coop-mock.png" alt="omega seguridad">
+                <h5>Cooperativa omega</h5>
+              </a>
+            </div>
 
           </div>
         </div>
       </article>
 
-
     </section>
+
+    <div class="wave-w"></div>
 
     <!--heblemos-->
 
-    <section class="hablemos pt-5 pb-4">
+    <section class="hablemos">
       <div class="container">
         <div class="row ">
           <div class=" col-lg-12 col-md-12" id="hablemos">
             <h5><i class="bi bi-people"></i> Hablemos </h5>
-            <h3>
-              ¿Tienes una idea<br> en mente?</h3>
+            <h3 class="text-primary fs-3">
+              ¿Tienes una idea en mente?</h3>
             <hr>
             <p>
               Estamos listos para ayudarte,<span> asesorarte de forma gratuita</span> y darle vida a tu proyecto.
@@ -273,7 +280,7 @@
     </section>
 
     <!--formulario-->
-    <section class="formu p-5">
+    <section class="formu">
       <div class="container ">
         <div class="row" id="form-consulta">
 
@@ -310,36 +317,37 @@
     </section>
 
 
+    <div class="wave-f"></div>
+  
     <!--footer-->
     <footer class="footer container-fluid">
-
-      <div class="footer-main row pt-4">
-
+  
+      <div class="footer-main row">
+  
         <div class=" col-lg-4 col-md-3">
           <img class="img-fluid" src="assets/blank-logo-f.png" alt="footer diseño web logo">
         </div>
         <div class="col-lg-4 col-md-3">
-          <p class="py-4">
+          <p class="pt-4">
             Como vos, estamos creciendo, nos estamos expandiendo y queremos que seas parte de esto.
             <br>
-            <br>
-
             Servicios de Marketing digital y Desarrollo web.
           </p>
         </div>
-
-        <div class="col-lg-4 col-md-3" id="linkf">
-          <h5><strong>CONTACTO</strong></h5>
+  
+        <div class="col-lg-4 col-md-3 pt-2" id="linkf">
+  
+          <h5 class="pt-2"><strong>CONTACTO</strong></h5>
           <hr>
           <ul id="f-contact">
-
+  
             <li>
               <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
-                target="_blank"><button class="wps"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
+                target="_blank"><button class="wps but"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
             </li>
             <li>
-              <a href="contacto.html"><i class="fas fa-align-justify px-2 fs-4" style="color: #596169;"></i>Formulario
-                de Contacto</a>
+              <a href="contacto.html"><i class="fas fa-align-justify px-2 fs-4" style="color: #596169;"></i>Formulario de
+                Contacto</a>
             </li>
             <li>
               <a href="mailto:blankfile.contact@gmail.com"><i
@@ -356,24 +364,24 @@
                   class="bi bi-instagram px-2 fs-3"></i></a>
               <a class="in" href="https://www.linkedin.com/in/blank-file-dise%C3%B1o-web-776462289/" target="_blank"><i
                   class="bi bi-linkedin px-2 fs-3"></i></a>
-
+  
             </li>
           </ul>
-
-
+  
+  
         </div>
-
+  
       </div>
       </div>
-
+  
       <div class="footer-copy row">
-        <div class=" col-md-12">
-          <p class="">
+        <div class=" col-lg-12">
+          <p class="text-center">
             © 2023 Blank file / Todos los derechos reservados.
           </p>
         </div>
       </div>
-
+  
     </footer>
 
 
