--- a/contacto.html
+++ b/contacto.html
@@ -70,12 +70,12 @@
   </button>
 
   <header class="" id="header">
-    <nav class="navbar navbar-expand-lg" data-bs-theme="ligth" id="nav">
+    <nav class="navbar navbar-expand-lg bg-section-dark " data-bs-theme="dark" id="nav">
       <div class="container">
 
         <a href="https://blankfile.com.ar" class="navbar-brand">
-          <h1 class="sr-only">Diseño web en cordoba</h1>
-          <img src="assets/blank-logo.png" alt="crear paginas web logo" class="logo">
+          <h1 class="sr-only">paginas web en cordoba</h1>
+          <img src="assets/blank-logo-f.png" alt="crear paginas web logo" class="logo">
         </a>
 
         <!-- NAV BUTTON  -->
@@ -86,7 +86,7 @@
         <!-- OFFCANVAS MAIN CONTAINER START -->
         <section class="offcanvas offcanvas-start" id="menuLateral" tabindex="-1">
           <div class="offcanvas-header" data-bs-theme="ligth">
-            <a class="offcanvas-title"><img src="assets/blank-logo.png" alt="diseño web en cordoba "></a>
+            <a class="offcanvas-title"><img src="assets/blank-logo-f.png" alt="diseño web en cordoba "></a>
             <button class="btn-close btn btn-light" type="button" aria-label="Close"
               data-bs-dismiss="offcanvas"></button>
           </div>
@@ -103,7 +103,7 @@
                 <a href="https://blankfile.com.ar/blog" class="nav-link">BLOG</a>
               </li>
               <li class="nav-item p-3 py-md-1">
-                <a href="https://blankfile.com.ar/contacto" id="a-contact" class="nav-link">CONTACTO</a>
+                <a href="https://blankfile.com.ar/contacto" id="a-contacto" class="nav-link">CONTACTO</a>
               </li>
             </ul>
             <!-- enlaces redes sociales -->
@@ -127,7 +127,10 @@
   </header>
 
 
-  <!--baner-->
+  
+
+  <main>
+<!--baner-->
   <section class="container-fluid">
     <div class="row" id="bannertop">
 
@@ -148,9 +151,6 @@
     </div>
   </section>
 
-  <main>
-
-
     <!--heblemos-->
 
     <section class="hablemos pt-5 pb-4">
@@ -158,7 +158,7 @@
         <div class="row ">
           <div class=" col-lg-12 col-md-12" id="hablemos">
             <h5><i class="bi bi-people"></i> Hablemos </h5>
-            <h3>
+            <h3 class="text-primary fs-2">
               ¿Tienes una idea<br> en mente?</h3>
             <hr>
             <p>
@@ -209,34 +209,35 @@
 
   </main>
 
-
-
+  <div class="wave-f"></div>
+  
   <!--footer-->
   <footer class="footer container-fluid">
 
-    <div class="footer-main row pt-4">
+    <div class="footer-main row">
 
       <div class=" col-lg-4 col-md-3">
         <img class="img-fluid" src="assets/blank-logo-f.png" alt="footer diseño web logo">
       </div>
       <div class="col-lg-4 col-md-3">
-        <p class="py-4">
+        <p class="pt-4">
           Como vos, estamos creciendo, nos estamos expandiendo y queremos que seas parte de esto.
           <br>
-          <br>
-
           Servicios de Marketing digital y Desarrollo web.
         </p>
       </div>
 
-      <div class="col-lg-4 col-md-3" id="linkf">
-        <h5><strong>CONTACTO</strong></h5>
+      <div class="col-lg-4 col-md-3 pt-2" id="linkf">
+
+        <h5 class="pt-2"><strong>CONTACTO</strong></h5>
         <hr>
         <ul id="f-contact">
+
           <li>
             <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
-              target="_blank"><button class="wps"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
+              target="_blank"><button class="wps but"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
           </li>
+
           <li>
             <a href="mailto:blankfile.contact@gmail.com"><i
                 class="bi bi-envelope-at px-2 fs-4"></i>blankfile.contact@gmail.com</a>
@@ -263,8 +264,8 @@
     </div>
 
     <div class="footer-copy row">
-      <div class=" col-md-12">
-        <p class="">
+      <div class=" col-lg-12">
+        <p class="text-center">
           © 2023 Blank file / Todos los derechos reservados.
         </p>
       </div>
