contact edit para pc

--- a/contacto.html
+++ b/contacto.html
@@ -130,26 +130,29 @@
   
 
   <main>
-<!--baner-->
-  <section class="container-fluid">
-    <div class="row" id="bannertop">
+    <section class="container-fluid " id="banner">
 
-      <div class="offset-lg-1 col-lg-6  " id="fondo">
-        <h2> ¡Hablemos de tu Proyecto en la Web!</h2>
+      <div class="container px-5">
+        <div class="row" id="bannertop">
 
-        <h3>
-          Nos encantaría escuchar tus ideas y ayudarte a crear la página web perfecta. ¡Contáctanos y comencemos a
-          diseñar juntos!
-        </h3>
+          <div class="col-lg-5" id="fondo">
+            <h2 class="fs-1">¡Hablemos de tu Proyecto en la Web!</h2>
+            <span class="py-5 fs-5">
+              Nos encantaría escuchar tus ideas y ayudarte a crear la página web perfecta. <br> ¡Contáctanos y comencemos a diseñar juntos!
+            </span>
+
+          </div>
+
+          <div class="col-lg-7 ">
+            <img class="img-fluid" src="assets/develop.png" alt="diseño web">
+          </div>
+        </div>
       </div>
 
-      <div class="col-lg-4 ">
-        <img class="img-fluid" src="assets/develop.png" alt="diseño web contacto">
-      </div>
 
+    </section>
 
-    </div>
-  </section>
+    <div class="wave-1"></div>
 
     <!--heblemos-->
 
