--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
               <p class="text">¿Que son? ¿Por qué tengo que saber sobre ellos?
               </p>
               <div class="overlay"></div>
-              <a href="/blog/dominio-hosting.html">
+              <a href="/blog/dominio-hosting.html" target="_blank">
                 <button class="art-btn">Leer Articulo</button>
               </a>
 
@@ -514,7 +514,7 @@
               <p class="text">Que tipo de página web necesito y porque es indispensable tenerla?
               </p>
               <div class="overlay"></div>
-              <a href="/blog/beneficios-pagina-web.html">
+              <a href="/blog/beneficios-pagina-web.html" target="_blank">
                 <button class="art-btn">Leer Articulo</button>
               </a>
 
@@ -526,7 +526,7 @@
               <p class="text">El impacto de las redes sociales en tu negocio y tu pagina web
               </p>
               <div class="overlay"></div>
-              <a href="/blog/redes-sociales-impacto.html">
+              <a href="/blog/redes-sociales-impacto.html" target="_blank">
                 <button class="art-btn">Leer Articulo</button>
               </a>
 
@@ -539,7 +539,7 @@
                 digital
               </p>
               <div class="overlay"></div>
-              <a href="blog.html"><button class="art-btn">Leer Articulo</button></a>
+              <a href="blog.html" target="_blank"><button class="art-btn">Leer Articulo</button></a>
 
             </div>
           </div>
