acordeaon-cambio de numero de whatsapp

--- a/blog.html
+++ b/blog.html
@@ -114,7 +114,7 @@
 
               <a class="facebook" href="https://www.facebook.com/blankfiledd" target="_blank"><i
                   class="bi bi-facebook px-2  fs-2"></i></a>
-              <a class="wpp" href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
+              <a class="wpp" href="https://api.whatsapp.com/send?phone=+5493516450645&amp;text= Quiero mi pagina web : "
                 target="_blank""><i class=" bi bi-whatsapp px-2 fs-2"></i></a>
               <a class="inst" href="https://www.instagram.com/blankfileweb/" target="_blank"><i
                   class="bi bi-instagram px-2 fs-2"></i></a>
@@ -258,8 +258,8 @@
         <ul id="f-contact">
 
           <li>
-            <a href="https://api.whatsapp.com/send?phone=+5493521531997&amp;text= Quiero mi pagina web : "
-              target="_blank"><button class="wps"><i class="bi bi-whatsapp px-2  fs-4"></i>3521 531997</button></a>
+            <a href="https://api.whatsapp.com/send?phone=+5493516450645&amp;text= Quiero mi pagina web : "
+              target="_blank"><button class="wps"><i class="bi bi-whatsapp px-2  fs-4"></i>351 6450645</button></a>
           </li>
           <li>
             <a href="contacto.html"><i class="fas fa-align-justify px-2 fs-4" style="color: #596169;"></i>Formulario de
