cambio de argonautas web

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 
           <div class="row work-galery text-center">
             <div class="col-lg-4 col-md-6 py-3">
-              <a href="https://argonautasrock.com.ar" target="_blank">
+              <a href="https://argonautas.netlify.app/" target="_blank">
                 <img class="" loading="lazy" src="assets/argo-mock.png" alt="argonautas">
                 <h5>Argonautas</h5>
               </a>
